@@ -899,7 +899,7 @@ void print_help(int mode) {
 "                       to find an existing display.  However, if it does not\n"
 "                       find one it will try to *start* up an X server session\n"
 "                       for the user.  This is the only time x11vnc tries to\n"
-"                       start up an X server.\n"
+"                       actually start up an X server.\n"
 "\n"
 "                       By default FINDCREATEDISPLAY will try Xdummy and\n"
 "                       then Xvfb.  The Xdummy wrapper is part of the x11vnc\n"
@@ -934,22 +934,30 @@ void print_help(int mode) {
 "                       X11VNC_FINDDISPLAY_ALWAYS_FAILS=1 (also -env ...)\n"
 "\n"
 "                       Use WAIT:cmd=FINDCREATEDISPLAY-print to print out the\n"
-"                       script used.  You can specify the preferred order via\n"
-"                       e.g., WAIT:cmd=FINDCREATEDISPLAY-Xdummy,Xvfb,X  and/or\n"
-"                       leave out ones you do not want.  The the extra case\n"
-"                       \"X\" means try to start up a real, hardware X server\n"
-"                       using xinit(1) or startx(1).  \"Xvnc\" also works.  If\n"
-"                       there is already an X server running the X case may\n"
-"                       only work on Linux (see startx(1)).\n"
+"                       script used.\n"
+"\n"
+"                       You can specify the preferred X server order via e.g.,\n"
+"                       WAIT:cmd=FINDCREATEDISPLAY-Xdummy,Xvfb,X  and/or leave\n"
+"                       out ones you do not want.  The the case \"X\" means try\n"
+"                       to start up a real, hardware X server using xinit(1)\n"
+"                       or startx(1).  If there is already an X server running\n"
+"                       the X case may only work on Linux (see startx(1)).\n"
+"\n"
+"                       \"Xvnc\" will start up a VNC X server (real-\n"
+"                       or tight-vnc, e.g. use if Xvfb is not available).\n"
+"                       \"Xsrv\" will start up the server program in the\n"
+"                       variable \"FD_XSRV\" if it is non-empty. You can make\n"
+"                       this be a wrapper script if you like (it must handle :N,\n"
+"                       -geometry, and -depth and other X server options).\n"
 "\n"
 "                       You can set the environment variable FD_GEOM (or\n"
-"                       X11VNC_CREATE_GEOM) to WxH or WxHxD to set the width\n"
-"                       and height and optionally the color depth of the\n"
-"                       created display.  You can also set FD_SESS to be the\n"
-"                       session (short name of the windowmanager: kde, gnome,\n"
-"                       twm, failsafe), and FD_OPTS as extra options to pass\n"
-"                       to the created X server. You can also set FD_PROG to\n"
-"                       be the full path to the session/windowmanager program.\n"
+"                       X11VNC_CREATE_GEOM) to WxH or WxHxD to set the width and\n"
+"                       height and optionally the color depth of the created\n"
+"                       display.  You can also set FD_SESS to be the session\n"
+"                       (short name of the windowmanager: kde, gnome, twm,\n"
+"                       failsafe, etc.). FD_OPTS as extra options to pass to\n"
+"                       the X server. You can also set FD_PROG to be the full\n"
+"                       path to the session/windowmanager program.\n"
 "\n"
 "                       If you want the FINDCREATEDISPLAY session to contact an\n"
 "                       XDMCP login manager (xdm/gdm/kdm) on the same machine,\n"
@@ -1930,6 +1938,16 @@ void print_help(int mode) {
 "                       e.g. !, @, [, are only accessible via -xkb mode and if\n"
 "                       so then automatically enable the mode.  To disable this\n"
 "                       automatic detection use -noxkb.\n"
+"\n"
+"                       When -xkb mode is active you can set these env. vars.\n"
+"                       They apply only when there is ambiguity as to which\n"
+"                       key to choose (i.e the mapping is not one-to-one).\n"
+"                       NOKEYHINTS=1: for up ascii keystrokes do not use score\n"
+"                       hints saved when the keep was press down.  NOANYDOWN=1:\n"
+"                       for up keystrokes do not resort to searching through\n"
+"                       keys that are currently pressed down.  KEYSDOWN=N:\n"
+"                       remember the last N keys press down for tie-breaking\n"
+"                       when an up keystroke comes in.\n"
 "\n"
 "-capslock              When in -modtweak (the default) or -xkb mode,\n"
 "                       if a keysym in the range A-Z comes in check the X\n"
