@@ -1208,6 +1208,15 @@ char create_display[] =
 "	server $have_Xvnc :$N -geometry $geom -depth $depth\n"
 "}\n"
 "\n"
+"try_Xsrv() {\n"
+"	if [ \"X$FD_XSRV\" = \"X\" ]; then\n"
+"		return\n"
+"	fi\n"
+"\n"
+"	server $FD_XSRV :$N -geometry $geom -depth $depth\n"
+"}\n"
+"\n"
+"\n"
 "try_Xvfb() {\n"
 "	if [ \"X$have_Xvfb\" = \"X\" ]; then\n"
 "		return\n"
@@ -1427,13 +1436,15 @@ char create_display[] =
 "	fi\n"
 "	curr_try=`echo \"$curr_try\" | sed -e  's/[+.-]xdmcp//'`\n"
 "	\n"
-"	if echo \"$curr_try\" | grep -iw \"Xdummy\" > /dev/null; then\n"
+"	if echo \"$curr_try\" | grep -iw \"^Xdummy\" > /dev/null; then\n"
 "		try_Xdummy\n"
-"	elif echo \"$curr_try\" | grep -iw \"Xvfb\" > /dev/null; then\n"
+"	elif echo \"$curr_try\" | grep -iw \"^Xvfb\" > /dev/null; then\n"
 "		try_Xvfb\n"
-"	elif echo \"$curr_try\" | grep -iw \"Xvnc\" > /dev/null; then\n"
+"	elif echo \"$curr_try\" | grep -iw \"^Xvnc\" > /dev/null; then\n"
 "		try_Xvnc\n"
-"	elif echo \"$curr_try\" | grep -iw \"X\" > /dev/null; then\n"
+"	elif echo \"$curr_try\" | grep -iw \"^Xsrv\" > /dev/null; then\n"
+"		try_Xsrv\n"
+"	elif echo \"$curr_try\" | grep -iw \"^X\" > /dev/null; then\n"
 "		try_X\n"
 "	fi\n"
 "	if [ \"X$result\" = \"X1\" ]; then\n"
