@@ -2,7 +2,7 @@
 .TH X11VNC "1" "August 2007" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.9.3, lastmod: 2007-08-17
+         version: 0.9.3, lastmod: 2007-08-19
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
@@ -1050,7 +1050,7 @@ that is like FINDDISPLAY in that is uses the same method
 to find an existing display.  However, if it does not
 find one it will try to *start* up an X server session
 for the user.  This is the only time x11vnc tries to
-start up an X server.
+actually start up an X server.
 .IP
 By default FINDCREATEDISPLAY will try Xdummy and
 then Xvfb.  The Xdummy wrapper is part of the x11vnc
@@ -1087,28 +1087,35 @@ try to find an existing display set the env. var
 X11VNC_FINDDISPLAY_ALWAYS_FAILS=1 (also \fB-env\fR ...)
 .IP
 Use WAIT:cmd=FINDCREATEDISPLAY-print to print out the
-script used.  You can specify the preferred order via
-e.g., WAIT:cmd=FINDCREATEDISPLAY-Xdummy,Xvfb,X  and/or
-leave out ones you do not want.  The the extra case
-"X" means try to start up a real, hardware X server
-using 
+script used.
+.IP
+You can specify the preferred X server order via e.g.,
+WAIT:cmd=FINDCREATEDISPLAY-Xdummy,Xvfb,X  and/or leave
+out ones you do not want.  The the case "X" means try
+to start up a real, hardware X server using 
 .IR xinit (1)
 or 
 .IR startx (1).
-"Xvnc" also works.  If
-there is already an X server running the X case may
-only work on Linux (see 
+If there is already an X server running
+the X case may only work on Linux (see 
 .IR startx (1)
 ).
 .IP
+"Xvnc" will start up a VNC X server (real-
+or tight-vnc, e.g. use if Xvfb is not available).
+"Xsrv" will start up the server program in the
+variable "FD_XSRV" if it is non-empty. You can make
+this be a wrapper script if you like (it must handle :N,
+\fB-geometry,\fR and \fB-depth\fR and other X server options).
+.IP
 You can set the environment variable FD_GEOM (or
-X11VNC_CREATE_GEOM) to WxH or WxHxD to set the width
-and height and optionally the color depth of the
-created display.  You can also set FD_SESS to be the
-session (short name of the windowmanager: kde, gnome,
-twm, failsafe), and FD_OPTS as extra options to pass
-to the created X server. You can also set FD_PROG to
-be the full path to the session/windowmanager program.
+X11VNC_CREATE_GEOM) to WxH or WxHxD to set the width and
+height and optionally the color depth of the created
+display.  You can also set FD_SESS to be the session
+(short name of the windowmanager: kde, gnome, twm,
+failsafe, etc.). FD_OPTS as extra options to pass to
+the X server. You can also set FD_PROG to be the full
+path to the session/windowmanager program.
 .IP
 If you want the FINDCREATEDISPLAY session to contact an
 XDMCP login manager (xdm/gdm/kdm) on the same machine,
@@ -2233,6 +2240,16 @@ The default is to check whether some common keysyms,
 e.g. !, @, [, are only accessible via \fB-xkb\fR mode and if
 so then automatically enable the mode.  To disable this
 automatic detection use \fB-noxkb.\fR
+.IP
+When \fB-xkb\fR mode is active you can set these env. vars.
+They apply only when there is ambiguity as to which
+key to choose (i.e the mapping is not one-to-one).
+NOKEYHINTS=1: for up ascii keystrokes do not use score
+hints saved when the keep was press down.  NOANYDOWN=1:
+for up keystrokes do not resort to searching through
+keys that are currently pressed down.  KEYSDOWN=N:
+remember the last N keys press down for tie-breaking
+when an up keystroke comes in.
 .PP
 \fB-capslock\fR
 .IP
