@@ -1,3 +1,7 @@
+2007-08-19  Karl Runge <runge@karlrunge.com>
+	* x11vnc: better -xkb tie-breaking for up keystrokes.  Add 
+	  Xsrv/FD_XSRV custom server to FINDCREATEDISPLAY list.
+
 2007-08-18  Karl Runge <runge@karlrunge.com>
 	* x11vnc: improve FINDCREATEDISPLAY (-create) script.  Document
 	  FD_GEOM, FD_SESS, FD_OPTS, FD_PROG env vars, add Xvnc support. 
